# turep

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
examples/: prediction_example.py
lightning_logs/version_1/: history.pkl
src/turep/: __init__.py  _fanvae.py  _fanvi.py  _ffadvae.py  _ffadvi.py  _focalmixin.py  _model_loader.py  _prediction.py
tests/: __init__.py  test_fanvi.py  test_ffadvi.py  test_focal_loss.py  test_model_loader.py  test_prediction.py
